--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  english_words: ^4.0.0
   provider: ^6.0.0
-  flutter_blue_plus: 1.31.8
+  flutter_blue_plus: ^1.34.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
