Fixing package name

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,17 +29,17 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace "com.example.planesign_mobile"
+    namespace "com.dmod.planesign_mobile"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion "27.2.12479018"
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     sourceSets {
@@ -47,7 +47,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.planesign_mobile"
+        applicationId "com.dmod.planesign_mobile"
         minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
